test/pass/codegen/std/actions/actorSpawnLoc/test.twge
block init {
    actions {
        actorSpawnLoc(actorId = "{instance.code}", x = 10, y = 11);
    }
}